# Rhizome-----

./: .env.example  .gitignore  README.md  SPEC.md  UV_SETUP.md  build.bat  fix_data.py  pyproject.toml  requirements.txt  rhizome.spec  run.bat  run.py  run_backend.py  start.bat  test_chat.py  test_embedding.py  test_imports.py  test_offline.py  test_output.txt
backend/: dependencies.py  main.py
backend/routes/: __init__.py  catalog.py  chat.py  config.py  feishu.py  graph.py  knowledge.py  reflection.py  review.py
doc/: 01-overview.md  02-architecture.md  03-modules.md  04-data-models.md  05-api-reference.md  06-configuration.md  07-deployment.md  08-development.md  09-huggingface-cache.md  SUMMARY.md
docs/: feishu-integration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: TreeNode.vue
frontend/src/views/: CatalogView.vue  ChatView.vue  ConfigView.vue  GraphView.vue  ReflectionView.vue  ReviewView.vue  SearchView.vue  StatsView.vue
knowledge_agent/: __init__.py  config.py
knowledge_agent/agent/: prompt_templates.py  qa_agent.py
knowledge_agent/feishu/: __init__.py  client.py  config.py  longpoll.py  message.py
knowledge_agent/knowledge/: catalog_manager.py  knowledge_store.py  models.py
knowledge_agent/reflection/: __init__.py  reflection_manager.py
knowledge_agent/review/: __init__.py  models.py  review_manager.py
knowledge_agent/storage/: json_storage.py  vector_store.py
knowledge_agent/ui/: gradio_app.py
scripts/: fix_knowledge_catalogs.py
